<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/settings" />

    <TextView
        android:id="@+id/sizeThresholdLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/motion_size_threshold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <SeekBar
        android:id="@+id/sizeThresholdSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:max="100"
        android:progress="50"
        app:layout_constraintEnd_toStartOf="@id/sizeThresholdValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sizeThresholdLabel" />

    <TextView
        android:id="@+id/sizeThresholdValue"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="50%"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/sizeThresholdSeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/sizeThresholdSeekBar" />

    <TextView
        android:id="@+id/speedThresholdLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/motion_speed_threshold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sizeThresholdSeekBar" />

    <SeekBar
        android:id="@+id/speedThresholdSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:max="100"
        android:progress="50"
        app:layout_constraintEnd_toStartOf="@id/speedThresholdValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/speedThresholdLabel" />

    <TextView
        android:id="@+id/speedThresholdValue"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="500 ms"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/speedThresholdSeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/speedThresholdSeekBar" />

    <TextView
        android:id="@+id/roiLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/region_of_interest"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/speedThresholdSeekBar" />

    <Switch
        android:id="@+id/roiSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@id/roiLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/roiLabel" />

    <Button
        android:id="@+id/drawRoiButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/draw_roi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/roiLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>
